[gd_scene load_steps=28 format=3 uid="uid://bhehqj2450xtc"]

[ext_resource type="Script" uid="uid://bbkomqcnkihxo" path="res://huds/car_selection/car_selection.gd" id="1_u64g1"]
[ext_resource type="Texture2D" uid="uid://bm552631w02kq" path="res://Maps/test_map/textures/Asphalt025C_1K-JPG_Color.jpg" id="1_wibte"]
[ext_resource type="ArrayMesh" uid="uid://rgbpy0gs4uf7" path="res://Cars/rat_rod/bug_car_body.obj" id="2_u64g1"]
[ext_resource type="ArrayMesh" uid="uid://vws8cc1dskg" path="res://Cars/rat_rod/bug_car_front_wheel.obj" id="3_h8baf"]
[ext_resource type="ArrayMesh" uid="uid://dpr5hvsc86g8i" path="res://Cars/rat_rod/bug_car_rear_wheel.obj" id="4_c3i15"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="5_6rdnw"]
[ext_resource type="ArrayMesh" uid="uid://djruo35vxgual" path="res://Cars/hot_rod_1/hot-rod-body.obj" id="6_c3i15"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="6_mycvf"]
[ext_resource type="ArrayMesh" uid="uid://cs400ksphy3ue" path="res://Cars/hot_rod_1/wheel.obj" id="7_6rdnw"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="7_btktd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gw526"]
sky_top_color = Color(0.461087, 0.641883, 0.858997, 1)
sky_horizon_color = Color(0.631155, 0.676354, 0.730632, 1)
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.631155, 0.676354, 0.730632, 1)

[sub_resource type="Sky" id="Sky_8jbfh"]
sky_material = SubResource("ProceduralSkyMaterial_gw526")

[sub_resource type="Environment" id="Environment_6lp0e"]
background_mode = 2
sky = SubResource("Sky_8jbfh")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hg4ax"]
albedo_texture = ExtResource("1_wibte")
uv1_scale = Vector3(4.945, 4.945, 4.945)

[sub_resource type="CylinderMesh" id="CylinderMesh_hwucu"]
top_radius = 6.0
bottom_radius = 6.0
height = 0.31

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7suyo"]
albedo_color = Color(0.771578, 2.28621e-06, 1.05888e-06, 1)
metallic = 0.75
roughness = 0.48

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8wghx"]
albedo_color = Color(0.327081, 0.327354, 0.320814, 1)
metallic = 0.85
roughness = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4oqaj"]
albedo_color = Color(0.453232, 0.453232, 0.453232, 1)
metallic = 0.53
roughness = 0.48

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_am86g"]
albedo_color = Color(0.854181, 3.77826e-06, 7.70092e-07, 1)
metallic = 0.72
roughness = 0.78

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jw762"]
albedo_color = Color(0.964706, 0.482353, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ovl38"]
albedo_color = Color(0.0267215, 0.0267215, 0.0267215, 1)
metallic = 0.51
roughness = 0.43

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ehe8b"]
albedo_color = Color(0.644073, 0.602524, 0.482867, 1)
metallic = 0.45
metallic_specular = 1.0
roughness = 0.33

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u3eru"]
albedo_color = Color(0.984314, 0, 0, 1)
metallic = 0.63
roughness = 0.62

[sub_resource type="Resource" id="Resource_fq8jf"]
script = ExtResource("7_btktd")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Animation" id="Animation_wibte"]
resource_name = "rotate"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vehicles/bugrod:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("vehicles/hotrod1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="Animation" id="Animation_u64g1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vehicles/bugrod:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("vehicles/hotrod1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h8baf"]
_data = {
&"RESET": SubResource("Animation_u64g1"),
&"rotate": SubResource("Animation_wibte")
}

[node name="CarSelection" type="Node3D"]
script = ExtResource("1_u64g1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6lp0e")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.953191, 0.30237, 1.3217e-08, 0, -4.37114e-08, 1, 0.30237, 0.953191, 4.16653e-08, 0, 0, 0)
shadow_enabled = true

[node name="vehicles" type="Node3D" parent="."]

[node name="bugrod" type="Node3D" parent="vehicles"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="vehicles/bugrod"]
material_override = SubResource("StandardMaterial3D_hg4ax")
mesh = SubResource("CylinderMesh_hwucu")
skeleton = NodePath("../../..")

[node name="BugCarBody" type="MeshInstance3D" parent="vehicles/bugrod"]
transform = Transform3D(0.56, 0, 0, 0, 0.56, 0, 0, 0, 0.56, 0, 0.860685, 0)
mesh = ExtResource("2_u64g1")
surface_material_override/0 = SubResource("StandardMaterial3D_7suyo")
surface_material_override/1 = SubResource("StandardMaterial3D_8wghx")
surface_material_override/2 = SubResource("StandardMaterial3D_4oqaj")
surface_material_override/3 = SubResource("StandardMaterial3D_am86g")
surface_material_override/4 = SubResource("StandardMaterial3D_jw762")
surface_material_override/5 = SubResource("StandardMaterial3D_ovl38")
surface_material_override/6 = SubResource("StandardMaterial3D_ehe8b")
surface_material_override/7 = SubResource("StandardMaterial3D_u3eru")

[node name="BugCarFrontWheel" type="MeshInstance3D" parent="vehicles/bugrod/BugCarBody"]
transform = Transform3D(1.00446, 0, 0, 0, 1.00446, 0, 0, 0, 1.00446, 0.935343, -0.593379, 2.35492)
mesh = ExtResource("3_h8baf")

[node name="BugCarRearWheel" type="MeshInstance3D" parent="vehicles/bugrod/BugCarBody"]
transform = Transform3D(-1.00446, 0, -1.5167e-07, 0, 1.00446, 0, 1.5167e-07, 0, -1.00446, -0.935, -0.614733, -1.8994)
mesh = ExtResource("4_c3i15")

[node name="BugCarRearWheel2" type="MeshInstance3D" parent="vehicles/bugrod/BugCarBody"]
transform = Transform3D(1.00446, 0, 0, 0, 1.00446, 0, 0, 0, 1.00446, 0.929696, -0.614575, -1.90002)
mesh = ExtResource("4_c3i15")

[node name="BugCarFrontWheel2" type="MeshInstance3D" parent="vehicles/bugrod/BugCarBody"]
transform = Transform3D(-1.00446, 0, -1.5167e-07, 0, 1.00446, 0, 1.5167e-07, 0, -1.00446, -0.935, -0.590723, 2.35485)
mesh = ExtResource("3_h8baf")

[node name="hotrod1" type="Node3D" parent="vehicles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="vehicles/hotrod1"]
material_override = SubResource("StandardMaterial3D_hg4ax")
mesh = SubResource("CylinderMesh_hwucu")
skeleton = NodePath("../../..")

[node name="Hot-rod-body" type="MeshInstance3D" parent="vehicles/hotrod1"]
transform = Transform3D(-0.73583, 0, -0.0784489, 0, 0.74, 0, 0.0784489, 0, -0.73583, 0, 0.689717, 0)
mesh = ExtResource("6_c3i15")

[node name="MeshInstance3D" type="MeshInstance3D" parent="vehicles/hotrod1/Hot-rod-body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.813407, -0.0477209, 1.71769)
mesh = ExtResource("7_6rdnw")
skeleton = NodePath("")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="vehicles/hotrod1/Hot-rod-body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.856201, -0.0477209, -1.6314)
mesh = ExtResource("7_6rdnw")
skeleton = NodePath("")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="vehicles/hotrod1/Hot-rod-body"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.813, -0.048, 1.718)
mesh = ExtResource("7_6rdnw")
skeleton = NodePath("")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="vehicles/hotrod1/Hot-rod-body"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.856, -0.048, -1.631)
mesh = ExtResource("7_6rdnw")
skeleton = NodePath("")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.944298, 0.329091, 0, -0.329091, 0.944298, 15, 1.455, 4.175)

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("5_6rdnw")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="PhantomCamera3D" type="Node3D" parent="." node_paths=PackedStringArray("follow_target", "look_at_target")]
transform = Transform3D(0.999999, 0, 0, 0, 0.944293, 0.329089, 0, -0.329089, 0.944293, 15, 1.455, 4.175)
top_level = true
script = ExtResource("6_mycvf")
follow_mode = 2
follow_target = NodePath("../vehicles/hotrod1")
look_at_mode = 2
look_at_target = NodePath("../vehicles/hotrod1")
tween_resource = SubResource("Resource_fq8jf")
follow_offset = Vector3(0, 1.455, 4.175)
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h8baf")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="left" type="Button" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -4.0
offset_right = 8.0
offset_bottom = 4.0
grow_vertical = 2
theme_override_font_sizes/font_size = 154
text = "<<"

[node name="right" type="Button" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 154
text = ">>"

[connection signal="button_up" from="CanvasLayer/left" to="." method="_on_left_button_up"]
[connection signal="button_up" from="CanvasLayer/right" to="." method="_on_right_button_up"]
